# Tesla_Vehicle_Noise_Anomaly_Detection_System

./: LICENSE  README.md  README_C++  requirements.txt
Cpp_inference/: CMakeLists.txt  tesla_nvh_advanced.cpp  tesla_nvh_simple.cpp
JSON_files/: tesla_demo_results.json  tesla_fleet_analysis.json  tesla_model_analysis.json
Jupyter_Notebook/: Tesla_NVH_Audio_Detection.ipynb
Python_Streamlit_Files/: tesla_dashboard.py  tesla_final_demo.py  tesla_fleet_manager.py  tesla_model_explorer.py
